<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warsaw_1"
    android:weightSum="1"
    android:id="@+id/activityMainMenu_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:id="@+id/activityMainMenu_title"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:text="@string/activityMainMenu_title_label"
        android:textAlignment="center"
        android:background="@android:color/transparent"
        android:textColor="#ffffff"
        android:textSize="35dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:typeface="monospace"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_weight="0.97" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMainMenu_button_newGame_label"
        android:id="@+id/activityMainMenu_button_newGame"
        android:visibility="visible"
        android:background="#a6dfd9d9"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMainMenu_button_joinGame_label"
        android:id="@+id/activityMainMenu_button_joinGame"
        android:background="#a6dfd9d9"
        android:textColor="#737373"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMainMenu_button_statistics_label"
        android:id="@+id/activityMainMenu_button_statistics"
        android:background="#a6dfd9d9"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMainMenu_button_quit_label"
        android:id="@+id/activityMainMenu_button_quit"
        android:background="#a6dfd9d9"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:textStyle="bold" />
</LinearLayout>